# privfp-poc

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  OPEN_CODE_CHECKLIST.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-pipeline.yml
configs/: experiment_config.yaml  global_config.yaml
notebooks/: 01_simple_experiment.ipynb  02_generate_dataset.ipynb  03_evaluate_data_loss.ipynb  04_de-identification.ipynb  05_rare_diseases.ipynb  06_sampling.ipynb  07_data_loss_score.ipynb  08_common_identifiers_in_rare_combinations.ipynb  09_explainability.ipynb  10_improve_data_loss.ipynb  11_llm_self_validation.ipynb
reports/: README.md
src/privacy_fingerprint/: __init__.py  cli.py
src/privacy_fingerprint/common/: __init__.py  db.py
src/privacy_fingerprint/common/config/: __init__.py  experiment_config.py  global_config.py
src/privacy_fingerprint/common/models/: __init__.py  llm.py  ner.py
src/privacy_fingerprint/explain/: __init__.py
src/privacy_fingerprint/extract/: __init__.py  aws_comprehend.py
src/privacy_fingerprint/generate/: synthea.py
src/privacy_fingerprint/score/: __init__.py
tests/: test_aws_comprehend.py  test_language_model.py
