[metadata]
name = privacy_fingerprint
description = Tool to provide a privacy risk score to clinical data
author = NHS England
author-email = datascience@nhs.net
url = https://github.com/nhsengland/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
install_requires =
 click
 correctmatch
 julia
 pydantic
 openai
 sqlalchemy==2.0.3
 boto3
 fuzzywuzzy
 pyyaml
 pandas
 shap
 numpy
 python-Levenshtein



[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
linting =
    black==22.3.0
    isort==5.11.5
    flake8==3.8.4
viz =
    matplotlib
    seaborn

[tool:pytest]
# Options for py.test:
addopts =
    --cov privacy_fingerprint --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 127
exclude =
    .tox
    dist
    .eggs

[options.entry_points]
console_scripts =
    privacy-fingerprint = privacy_fingerprint.cli:cli
